Created basic page MyList and exported some functionality to hooks

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -10,7 +10,7 @@
     "title": "Film Details"
   },
   "myList": {
-    "logout": "My list"
+    "title": "My list"
   },
   "error": {
     "title": "An error has been occurred..."
